[workspace]
members = [
    "allocative/allocative",
    "allocative/allocative_derive",
    "app/buck2",
    "app/buck2_action_impl",
    "app/buck2_action_impl_tests",
    "app/buck2_action_metadata_proto",
    "app/buck2_analysis",
    "app/buck2_anon_target",
    "app/buck2_cmd_audit_client",
    "app/buck2_cmd_audit_server",
    "app/buck2_bxl",
    "app/buck2_build_info",
    "app/buck2_certs",
    "app/buck2_cfg_constructor",
    "app/buck2_client",
    "app/buck2_client_ctx",
    "app/buck2_cmd_completion_client",
    "app/buck2_cmd_debug_client",
    "app/buck2_cmd_docs_client",
    "app/buck2_cmd_docs_server",
    "app/buck2_cmd_log_client",
    "app/buck2_cmd_query_server",
    "app/buck2_cmd_rage_client",
    "app/buck2_common",
    "app/buck2_env",
    "app/buck2_configured",
    "app/buck2_core",
    "app/buck2_cli_proto",
    "app/buck2_cmd_targets_server",
    "app/buck2_daemon",
    "app/buck2_directory",
    "app/buck2_downward_api",
    "app/buck2_downward_api_proto",
    "app/buck2_error",
    "app/buck2_error_derive",
    "app/buck2_error_tests",
    "app/buck2_errorformat",
    "app/buck2_event_observer",
    "app/buck2_events",
    "app/buck2_event_log",
    "app/buck2_execute",
    "app/buck2_execute_impl",
    "app/buck2_execute_local",
    "app/buck2_external_cells",
    "app/buck2_external_cells_bundled",
    "app/buck2_grpc",
    "app/buck2_health_check",
    "app/buck2_health_check_proto",
    "app/buck2_http",
    "app/buck2_install_proto",
    "app/buck2_interpreter",
    "app/buck2_interpreter_for_build",
    "app/buck2_interpreter_for_build_tests",
    "app/buck2_miniperf",
    "app/buck2_miniperf_proto",
    "app/buck2_node",
    "app/buck2_node_tests",
    "app/buck2_offline_archive",
    "app/buck2_artifact",
    "app/buck2_cmd_starlark_client",
    "app/buck2_cmd_starlark_server",
    "app/buck2_test",
    "app/buck2_test_api",
    "app/buck2_test_proto",
    "app/buck2_test_runner",
    "app/buck2_forkserver",
    "app/buck2_forkserver_proto",
    "app/buck2_fs",
    "app/buck2_profile",
    "app/buck2_protoc_dev",
    "app/buck2_query",
    "app/buck2_query_impls",
    "app/buck2_query_parser",
    "app/buck2_query_derive",
    "app/buck2_re_configuration",
    "app/buck2_resource_control",
    "app/buck2_server",
    "app/buck2_server_commands",
    "app/buck2_server_ctx",
    "app/buck2_server_starlark_debug",
    "app/buck2_transition",
    "app/buck2_util",
    "app/buck2_data",
    "app/buck2_worker_proto",
    "app/buck2_wrapper_common",
    "app/buck2_build_api",
    "app/buck2_build_api_derive",
    "app/buck2_build_api_tests",
    "app/buck2_subscription_proto",
    "app/buck2_critical_path",
    "app/buck2_build_signals",
    "app/buck2_build_signals_impl",
    "app/buck2_eden",
    "app/buck2_validation",
    "app/buck2_host_sharing_proto",
    "dice/dice",
    "dice/dice_error",
    "dice/dice_examples",
    "dice/dice_futures",
    "dice/dice_tests",
    # @oss-disable: "dice/fuzzy_dice",
    "dice/read_dump",
    # @oss-disable: "host_sharing",
    "gazebo/display_container",
    "gazebo/cmp_any",
    "gazebo/gazebo",
    "gazebo/gazebo_derive",
    "gazebo/strong_hash",
    "gazebo/strong_hash_derive",
    "gazebo/strong_hash_tests",
    "integrations/resources/rust",
    "integrations/rust-project",
    "pagable",
    "pagable_derive",
    "remote_execution/oss/re_grpc",
    "remote_execution/oss/re_grpc_proto",
    "starlark-rust/starlark",
    "starlark-rust/starlark_bin",
    "starlark-rust/starlark_derive",
    "starlark-rust/starlark_lsp",
    "starlark-rust/starlark_map",
    "starlark-rust/starlark_syntax",
    "shed/setsketch",
    "shed/static_interner",
    "shed/lock_free_hashtable",
    "shed/lock_free_vec",
    "shed/provider",
    "shed/three_billion_instructions",
    "superconsole",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/facebook/buck2"

[workspace.dependencies]
anyhow = "1.0.65"
anymap3 = "1.0.1"
arc-swap = "1.6.0"
argfile = "0.2"
assert_matches = "1.5"
async-compression = { version = "=0.4.9", features = ["tokio", "brotli", "deflate", "gzip", "zstd"] }
async-condvar-fair = { version = "1.0", features = ["parking_lot_0_11", "tokio"] }
async-recursion = "1.0"
async-scoped = { version = "0.9", features = ["use-tokio"] }
async-trait = "0.1.24"
atomic = "0.5.1"
backtrace = "0.3.51"
base64 = "0.21.7"
bincode = "1.3.3"
blake3 = { version = "1.3.1", features = ["default", "rayon", "std", "traits-preview"] }
bumpalo = "3.11.1"
bytemuck = { version = "1.24", features = ["const_zeroed", "derive", "min_const_generics", "must_cast", "nightly_portable_simd", "nightly_stdsimd"] }
byteorder = "1.4.3"
bytes = "1.0"
bytesize = "2.0"
chrono = "0.4.38"
clap = { version = "4.5.6", features = ["derive", "env", "string"] }
clap_complete = "4.5.5"
common-path = "1.0.0"
compact_str = { version = "0.8", features = ["serde"] }
console = "0.15.7"
const-oid = { version = "0.9.6", features = ["db"] }
const_format = "0.2.32"
constant_time_eq = "0.2.4"
convert_case = "0.4.0"
criterion = { version = "0.3.1", features = [] }
crossbeam = "0.8"
crossbeam-channel = "0.5.8"
crossbeam-epoch = "0.9.7"
crossterm = "0.27"
csv = "1.1"
ctor = "0.1.16"
dashmap = "5.5.3"
debugserver-types = "0.5.0"
derivative = "2.2"
derive_more = { version = "1.0.0", features = ["full"] }
digest = { version = "0.10", features = ["oid"] }
dirs = "3.0.1"
dunce = "1.0.2"
either = "1.8"
enum-iterator = "1.4.1"
enum-map = "2.7.3"
env_logger = "0.9.0"
equivalent = "1.0.0"
erased-serde = "0.3.20"
faccess = "0.2.3"
fancy-regex = "0.16.0"
flate2 = "1.0.22"
fnv = "1.0"
fs4 = { version = "0.9.1", features = ["sync"] }
futures = { version = "0.3.28", features = ["async-await", "compat"] }
futures-intrusive = "0.4"
fxhash = "0.2.1"
glob = "0.3.0"
globset = "0.4.10"
h2 = { version = "^0.4.13" } # force version bump for https://github.com/facebook/buck2/issues/1123
hashbrown = { version = "0.14.3", features = ["raw"] }
hex = "0.4.3"
hostname = "0.3.1"
http = "1.3.1"
http-body-util = "0.1.0"
httparse = "1.7.1"
httptest = "0.16"
humantime = "2.0.1"
hyper = { version = "1.5.1", features = ["client", "http1", "http2"] }
hyper-http-proxy = "1.0"
hyper-rustls = { version = "0.27.0", features = ["http2"] }
hyper-timeout = "0.5"
hyper-util = "0.1.10"
hyperlocal = { version = "0.9", features = ["client"] }
indent_write = "2.2.0"
indenter = "0.3.3"
index_vec = "0.1.4"
indexmap = { version = "2.12.1", features = ["serde"] }
indoc = "2.0.2"
inferno = { version = "0.11.19", default-features = false }
internment = { version = "0.8", features = ["arc"] }
inventory = "0.3.8"
ipnetwork = "0.20.0"
is_proc_translated = "0.1.1"
itertools = "0.13.0"
lalrpop = { version = "0.19.7", artifact = "bin" }
lalrpop-util = "0.19.7"
libc = "0.2.158"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
linkme = { version = "0.3.17", features = ["used_linker"] }
log = "0.4"
logos = "0.12"
lru = "0.12.3"
lsp-server = "0.7.2"
lsp-types = "0.94.1"
maplit = "1.0.2"
mappable-rc = { version = "0.1.1", features = ["std"] }
memchr = "2.4.1"
memmap2 = "0.5.0"
memoffset = "0.6.4"
mimalloc = "0.1.46"
multimap = "0.8.2"
native-tls = "0.2"
nix = { version = "0.30.1", features = ["dir", "event", "hostname", "inotify", "ioctl", "mman", "mount", "net", "poll", "ptrace", "reboot", "resource", "sched", "signal", "term", "time", "user", "zerocopy"] }
nom = "8"
nom-language = "0.1"
notify = "=5.0.0"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits = "0.2"
num_cpus = "1.11"
num_enum = "0.7"
object = "0.36.7"
once_cell = "1.8"
os_str_bytes = { version = "6.6.0", features = ["conversions"] }
parking_lot = { version = "0.11.2", features = ["send_guard"] }
paste = "1.0"
pathdiff = "0.2"
perf-event = "0.4"
perf-event-open-sys = "5.0"
pin-project = "0.4.29"
plist = "1.4.3"
postcard = { version = "1.0.8", features = ["use-crc", "use-std"] }
pretty_assertions = "1.2.1"
probminhash = { git = "https://github.com/krallin/probminhash", rev = "3d6b7a5315305c2893a7a04e0de9e23b305992c5", default-features = false } # WAITING_FOR_PR https://github.com/jean-pierreBoth/probminhash/pull/4
proc-macro2 = "1.0"
prost = "0.13.4"
prost-build = "0.13.4"
prost-derive = "0.13.4"
prost-types = "0.13.4"
protoc-bin-vendored = "3.0.0"
psutil = "3.2"
quote = "1.0.3"
rand = { version = "0.9", features = ["small_rng"] }
rand_08 = { package = "rand", version = "0.8.4", features = ["small_rng"] }
rand_chacha = "0.3"
rand_distr = "0.5"
rand_distr_04 = { package = "rand_distr", version = "0.4" }
rand_xoshiro = "0.7"
ref-cast = "1.0.0"
regex = "1.12.2"
relative-path = { version = "1.7.0", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustc-hash = { version = "2.1" }
rustls = { package = "rustls", version = "0.23.29", features = ["aws-lc-rs"], default-features = false }
rustls-native-certs = { version = "0.8.1" }
rustls-pemfile = { package = "rustls-pemfile", version = "1.0.0" }
rustls-pki-types = { version = "1.0", features = ["alloc", "std"] }
rustyline = "14.0"
scopeguard = "1.0.0"
sequence_trie = "0.3.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0.48", features = ["raw_value"] }
serde_path_to_error = "0.1"
sha1 = "0.10"
sha2 = "0.10"
shlex = "1.3"
siphasher = "0.3.3"
slab = "0.4.7"
slog = "2.7.0"
smallvec = { version = "1.10", features = ["const_generics", "const_new", "serde", "specialization", "union", "write"] }
static_assertions = "1.1.0"
strsim = "0.10.0"
structopt = "0.3.23"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
syn = { version = "2", features = ["extra-traits", "full", "visit"] }
sync_wrapper = "0.1.0"
sys-info = "0.9.1"
sysinfo = "0.35.1"
take_mut = "0.2.2"
tar = "0.4.38"
tempfile = "3.1.0"
termimad = "0.30"
termios = "0.3"
termwiz = "0.23"
test-case = "3.1.0"
textwrap = { version = "0.11", features = ["term_size"] }
thiserror = "1.0.36"
threadpool = "1.8.1"
tikv-jemallocator = { version = "0.6.0", features = ["profiling"] }
tokio = { version = "1.25.0", features = ["full", "test-util", "tracing"] }
tokio-rustls = { version = "0.26" }
tokio-stream = { version = "0.1.14", features = ["fs", "io-util", "net", "sync", "time", "signal"] }
tokio-util = { version = "0.6", features = ["full"] }
toml = "0.5"
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }
tonic-build = { version = "0.12.3", features = ["prost", "cleanup-markdown"] }
tower = "0.4"
tower-layer = "0.3.1"
tower-service = "0.3.3"
tracing = "0.1.22"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
triomphe = "0.1.11"
trybuild = "1.0.56"
twox-hash = "1.6.1"
typed-arena = "2.0"
unicode-segmentation = "1.7"
uuid = { version = "=1.19.0", features = ["v4"] }
walkdir = "2.3.2"
which = "4.3.0"
winapi = { version = "0.3", features = ["everything", "std"] }
x509-parser = "0.14.0"
xattr = "0.2.2"
zip = "0.5"
zstd = "0.13.0"

# @oss-disable: fbinit.path = "../common/rust/shed/fbinit"
fbinit.version = "0.2"
# @oss-disable: sorted_vector_map.path = "../common/rust/shed/sorted_vector_map"
sorted_vector_map.git = "https://github.com/facebookexperimental/rust-shed" # @oss-enable
sorted_vector_map.version = "0.2"

allocative.features = ["anyhow", "bumpalo", "dashmap", "either", "futures", "hashbrown", "indexmap", "num-bigint", "once_cell", "parking_lot", "prost-types", "relative-path", "serde_json", "slab", "smallvec", "compact_str", "sorted_vector_map", "tokio", "triomphe"]
allocative.path = "allocative/allocative"
allocative.version = "0.3.1"
cmp_any = { path = "gazebo/cmp_any" }
dice = { path = "dice/dice" }
dice_error = { path = "dice/dice_error" }
dice_futures = { path = "dice/dice_futures" }
display_container = { path = "gazebo/display_container" }
dupe.path = "gazebo/dupe"
dupe.version = "0.9.0"
gazebo.features = ["str_pattern_extensions"]
gazebo.path = "gazebo/gazebo"
gazebo.version = "0.8.1"
host_sharing = { path = "host_sharing" }
lock_free_hashtable = { version = "0.1.0", path = "shed/lock_free_hashtable" }
lock_free_vec = { path = "shed/lock_free_vec" }
pagable = { path = "pagable" }
pagable_derive = { path = "pagable_derive" }
provider = { path = "shed/provider" }
remote_execution = { path = "remote_execution/oss/re_grpc" }
setsketch = { path = "shed/setsketch" }
starlark = { version = "0.13.0", path = "starlark-rust/starlark" }
starlark_lsp = { version = "0.13.0", path = "starlark-rust/starlark_lsp" }
starlark_map = { version = "0.13.0", path = "starlark-rust/starlark_map" }
starlark_syntax = { version = "0.13.0", path = "starlark-rust/starlark_syntax" }
static_interner = { path = "shed/static_interner" }
strong_hash.features = ["num-bigint", "triomphe"]
strong_hash.path = "gazebo/strong_hash"
strong_hash_derive = { path = "gazebo/strong_hash_derive" }
three_billion_instructions = { path = "shed/three_billion_instructions" }

buck2_action_impl = { path = "app/buck2_action_impl" }
buck2_action_metadata_proto = { path = "app/buck2_action_metadata_proto" }
buck2_analysis = { path = "app/buck2_analysis" }
buck2_anon_target = { path = "app/buck2_anon_target" }
buck2_artifact = { path = "app/buck2_artifact" }
buck2_build_api = { path = "app/buck2_build_api" }
buck2_build_api_derive = { path = "app/buck2_build_api_derive" }
buck2_build_info = { path = "app/buck2_build_info" }
buck2_build_signals = { path = "app/buck2_build_signals" }
buck2_build_signals_impl = { path = "app/buck2_build_signals_impl" }
buck2_bxl = { path = "app/buck2_bxl" }
buck2_certs = { path = "app/buck2_certs" }
buck2_cfg_constructor = { path = "app/buck2_cfg_constructor" }
buck2_cli_proto = { path = "app/buck2_cli_proto" }
buck2_client = { path = "app/buck2_client" }
buck2_client_ctx = { path = "app/buck2_client_ctx" }
buck2_cmd_audit_client = { path = "app/buck2_cmd_audit_client" }
buck2_cmd_audit_server = { path = "app/buck2_cmd_audit_server" }
buck2_cmd_completion_client = { path = "app/buck2_cmd_completion_client" }
buck2_cmd_debug_client = { path = "app/buck2_cmd_debug_client" }
buck2_cmd_docs_client = { path = "app/buck2_cmd_docs_client" }
buck2_cmd_docs_server = { path = "app/buck2_cmd_docs_server" }
buck2_cmd_log_client = { path = "app/buck2_cmd_log_client" }
buck2_cmd_query_server = { path = "app/buck2_cmd_query_server" }
buck2_cmd_rage_client = { path = "app/buck2_cmd_rage_client" }
buck2_cmd_starlark_client = { path = "app/buck2_cmd_starlark_client" }
buck2_cmd_starlark_server = { path = "app/buck2_cmd_starlark_server" }
buck2_cmd_targets_server = { path = "app/buck2_cmd_targets_server" }
buck2_common = { path = "app/buck2_common" }
buck2_configured = { path = "app/buck2_configured" }
buck2_core = { path = "app/buck2_core" }
buck2_critical_path = { path = "app/buck2_critical_path" }
buck2_daemon = { path = "app/buck2_daemon" }
buck2_data = { path = "app/buck2_data" }
buck2_directory = { path = "app/buck2_directory" }
buck2_downward_api = { path = "app/buck2_downward_api" }
buck2_downward_api_proto = { path = "app/buck2_downward_api_proto" }
buck2_eden = { path = "app/buck2_eden" }
buck2_env = { path = "app/buck2_env" }
buck2_error = { path = "app/buck2_error" }
buck2_error_derive = { path = "app/buck2_error_derive" }
buck2_errorformat = { path = "app/buck2_errorformat" }
buck2_event_log = { path = "app/buck2_event_log" }
buck2_event_observer = { path = "app/buck2_event_observer" }
buck2_events = { path = "app/buck2_events" }
buck2_execute = { path = "app/buck2_execute" }
buck2_execute_impl = { path = "app/buck2_execute_impl" }
buck2_execute_local = { path = "app/buck2_execute_local" }
buck2_external_cells = { path = "app/buck2_external_cells" }
buck2_external_cells_bundled = { path = "app/buck2_external_cells_bundled" }
buck2_file_watcher = { path = "app/buck2_file_watcher" }
buck2_forkserver = { path = "app/buck2_forkserver" }
buck2_forkserver_proto = { path = "app/buck2_forkserver_proto" }
buck2_fs = { path = "app/buck2_fs" }
buck2_grpc = { path = "app/buck2_grpc" }
buck2_health_check = { path = "app/buck2_health_check" }
buck2_health_check_proto = { path = "app/buck2_health_check_proto" }
buck2_host_sharing_proto = { path = "app/buck2_host_sharing_proto" }
buck2_http = { path = "app/buck2_http" }
buck2_install_proto = { path = "app/buck2_install_proto" }
buck2_interpreter = { path = "app/buck2_interpreter" }
buck2_interpreter_for_build = { path = "app/buck2_interpreter_for_build" }
buck2_interpreter_for_build_tests = { path = "app/buck2_interpreter_for_build_tests" }
buck2_miniperf = { path = "app/buck2_miniperf" }
buck2_miniperf_proto = { path = "app/buck2_miniperf_proto" }
buck2_node = { path = "app/buck2_node" }
buck2_offline_archive = { path = "app/buck2_offline_archive" }
buck2_profile = { path = "app/buck2_profile" }
buck2_protoc_dev = { path = "app/buck2_protoc_dev" }
buck2_query = { path = "app/buck2_query" }
buck2_query_derive = { path = "app/buck2_query_derive" }
buck2_query_impls = { path = "app/buck2_query_impls" }
buck2_query_parser = { path = "app/buck2_query_parser" }
buck2_re_configuration = { path = "app/buck2_re_configuration" }
buck2_resource_control = { path = "app/buck2_resource_control" }
buck2_server = { path = "app/buck2_server" }
buck2_server_commands = { path = "app/buck2_server_commands" }
buck2_server_ctx = { path = "app/buck2_server_ctx" }
buck2_server_starlark_debug = { path = "app/buck2_server_starlark_debug" }
buck2_subscription_proto = { path = "app/buck2_subscription_proto" }
buck2_test = { path = "app/buck2_test" }
buck2_test_api = { path = "app/buck2_test_api" }
buck2_test_proto = { path = "app/buck2_test_proto" }
buck2_test_runner = { path = "app/buck2_test_runner" }
buck2_transition = { path = "app/buck2_transition" }
buck2_util = { path = "app/buck2_util" }
buck2_validation = { path = "app/buck2_validation" }
buck2_worker_proto = { path = "app/buck2_worker_proto" }
buck2_wrapper_common = { path = "app/buck2_wrapper_common" }

[profile.release]
incremental = true
panic = "abort"
# The line below increases build times from 50s to 84s, with no observed impact on runtime speed.
# But maybe for some benchmarks it will show more noticeable variation.
# lto = "thin"

# Use with: --profile=release-symbols -Z unstable-options
[profile.release-symbols]
debug = true
incremental = true
inherits = "release"

[profile.dev]
debug = true
incremental = true
lto = "off"
opt-level = 1
panic = "abort"

[profile.test]
incremental = true

[profile.bench]
incremental = true

[patch.crates-io]
# For https://github.com/jimblandy/perf-event/pull/29
# Base on the comment in https://github.com/jimblandy/perf-event/pull/53, we will no long need this patch in future.
perf-event = { git = "https://github.com/Nero5023/perf-event.git", rev = "6dae86b6d4807acec081e6dc0a53167f57f8c0f4", version = "0.4" }
perf-event-open-sys = { git = "https://github.com/Nero5023/perf-event.git", rev = "6dae86b6d4807acec081e6dc0a53167f57f8c0f4", version = "5.0" }
