[package]
name = "buck2_audit"
version = "0.1.0"
edition = "2021"
description = "`buck2 audit` command implementation, both client and server"

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.24"
clap = "3.1.5"
derive_more = "0.99.3"
futures = "0.3"
indent_write = "2.2.0"
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10.3"
maplit = "1.0.2"
ref-cast = "1.0.0"
thiserror = "1.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"

dice = { path = "../dice/dice" }
gazebo = { path = "../gazebo/gazebo" }

buck2_build_api = { path = "../buck2_build_api" }
# Dependency on `buck2_client` is OK because it does not depend on `buck2_build_api`,
# so this dependency does not increase critical path length.
buck2_client = { path = "../buck2_client" }
buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_events = { path = "../buck2_events" }
buck2_interpreter = { path = "../buck2_interpreter" }
buck2_node = { path = "../buck2_node" }
buck2_query = { path = "../buck2_query" }
buck2_server_ctx = { path = "../buck2_server_ctx" }
cli_proto = { path = "../cli_proto" }
