[package]
name = "buck2_build_api"
version = "0.1.0"
edition = "2021"
description = "Build related interpreter defs, coercion logic, some build rule impelementations, and handing actions off to DICE for caching and execution. A large chunk of the 'build' part of BuckV2"

[dependencies]
dashmap = { workspace = true }
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
derivative = { workspace = true }
hashbrown = { workspace = true }
once_cell = { workspace = true }
indoc = { workspace = true }
inventory = { workspace = true }
fancy-regex = { workspace = true }
futures = { workspace = true }
internment = { workspace = true }
itertools = { workspace = true }
owning_ref = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ref-cast = { workspace = true }
shlex = { workspace = true }
static_assertions = { workspace = true }
structopt = { workspace = true }
take_mut = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true }
either = { workspace = true }
reqwest = { workspace = true }
sha-1 = { workspace = true }
hex = { workspace = true }
smallvec = { workspace = true }
assert_matches = { workspace = true }
crossbeam-epoch = { workspace = true }
http = { workspace = true }
parking_lot = { workspace = true }

dice = { path = "../dice/dice" }
fbinit = { workspace = true }
gazebo = { workspace = true }
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
host_sharing = { workspace = true }
more_futures = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }

buck2_build_api_derive = { path = "../buck2_build_api_derive" }
buck2_core = { path = "../buck2_core" }
buck2_common = { path = "../buck2_common" }
buck2_data = { path = "../buck2_data" }
buck2_events = { path = "../buck2_events" }
buck2_execute = { path = "../buck2_execute" }
buck2_interpreter = { path = "../buck2_interpreter" }
buck2_interpreter_for_build = { path = "../buck2_interpreter_for_build" }
buck2_node = { path = "../buck2_node" }
buck2_query = { path = "../buck2_query" }
buck2_query_parser = { path = "../app/buck2_query_parser" }
buck2_test_api = { path = "../app/buck2_test_api" }
cli_proto = { path = "../cli_proto" }

[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }

[features]
# @oss-disable: default = ["gazebo_lint"]
