[package]
name = "buck2_bxl"
version = "0.1.0"
edition = "2021"
description = "Buck V2 extension language"

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.24"
buck2_docs_gen = { path = "../buck2_docs_gen/buck2_docs_gen" }
clap = "3.1.5"
derivative = "2.1.1"
derive_more = "0.99.3"
either = "1.5"
futures = "0.3"
indexmap = { version = "1.6", features = ["serde-1"] }
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
structopt = "0.3.0"
thiserror = "1.0.9"
tokio = { version = "1.5", features = ["full"]}

fbinit.version = "0.1"
# @oss-disable: fbinit.path = "../../common/rust/shed/fbinit"

async_std_ext = { path = "../shed/async_std_ext" }
gazebo.version = "0.7.1"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"
dice = { path = "../dice/dice" }
events = { path = "../events" }
# For `SmallMap`
starlark = { version = "0.9.0-pre", path = "../starlark-rust/starlark" }
starlark_map = { version = "0.9.0-pre", path = "../starlark-rust/starlark_map" }

buck2_build_api = { path = "../buck2_build_api" }
buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_interpreter = { path = "../buck2_interpreter" }
buck2_node = { path = "../buck2_node" }
buck2_query = { path = "../buck2_query" }
buck2_query_parser = { path = "../buck2_query_parser" }

[target.'cfg(unix)'.dependencies]
jemallocator = { version = "0.3.2", features = ["profiling"] }

[[bin]]
name = "bql"
path = "bin/bql.rs"
