cargo-features = ["workspace-inheritance"]

[package]
name = "buck2_bxl"
version = "0.1.0"
edition = "2021"
description = "Buck V2 extension language"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
structopt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

fbinit.version = "0.1"
# @oss-disable: fbinit.path = "../../common/rust/shed/fbinit"

async_std_ext = { path = "../shed/async_std_ext" }
gazebo.version = "0.8.0"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"
dice = { path = "../dice/dice" }
buck2_events = { path = "../buck2_events" }
# For `SmallMap`
starlark = { version = "0.9.0-pre", path = "../starlark-rust/starlark" }
starlark_map = { version = "0.9.0-pre", path = "../starlark-rust/starlark_map" }

buck2_build_api = { path = "../buck2_build_api" }
buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_interpreter = { path = "../buck2_interpreter" }
buck2_interpreter_for_build = { path = "../buck2_interpreter_for_build" }
buck2_node = { path = "../buck2_node" }
buck2_query = { path = "../buck2_query" }
buck2_query_parser = { path = "../buck2_query_parser" }
buck2_server_ctx = { path = "../buck2_server_ctx" }
cli_proto = { path = "../cli_proto" }

[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true }
