[package]
name = "buck2_cli_proto"

edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }

buck2_data = { workspace = true }

[build-dependencies]
buck2_protoc_dev = { workspace = true }
