[package]
description = "Some parts of Buck client"
edition = "2021"
name = "buck2_client"
version = "0.1.0"

[dependencies]
anyhow = "1.0.51"
async-compression = { version = "0.3.8", features = ["tokio", "gzip"] }
async-trait = "0.1.24"
blake3 = "0.3.7"
bytes = { version = "1.1.0" }
clap = { version = "3.1.18", features = ["derive", "env"] }
chrono = "0.4.19"
crossterm = "0.23"
derive_more = "0.99.3"
fs2 = "0.4.3"
futures = "0.3"
hex = "0.4.3"
# @oss-disable: hostcaps = { path = "../../common/rust/shed/hostcaps", optional = true }
humantime = "2.0.1"
itertools = "0.10.0"
libc = "0.2.103"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
lsp-server = "0.5"
memmap = "0.7.0"
nix = "0.22"
object = "0.25.3"
once_cell = "1.3"
pin-project = "0.4.29"
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
shlex = "1.1"
superconsole = { version = "0.1.0", path = "../superconsole" }
sync_wrapper = "0.1.0"
termwiz = "0.15"
thiserror = "1.0.24"
tokio = {version = "1.5", features = ["full"]}
tokio-stream = { version = "0.1.4", features = ["fs", "io-util", "net", "sync", "time"] }
tokio-util = {version = "0.7.1", features = ["full"]}
tonic = "0.7.2"
tracing = "0.1.22"

dice = { path = "../dice/dice" }
gazebo = { path = "../gazebo/gazebo" }
fbinit = { path = "../../common/rust/shed/fbinit" }

# Please do not add dependency on `buck2_build_api`.
buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_events = { path = "../buck2_events" }
buck2_test_api = { path = "../buck2_test_api" }
cli_proto = { path = "../cli_proto" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["everything"] }

[dev-dependencies]
pretty_assertions = "0.6"
tempfile = "3.1.0"

[features]
# @oss-disable: default = ["extra_logging"]
# @oss-disable: extra_logging = ["hostcaps"]
extra_logging = [] # @oss-enable
